# PathPal

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: .env.example  .gitignore  README.md  analysis_options.yaml  build_runner.yaml  pubspec.yaml
app/android/: local.properties
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/scripts/: build.sh
app/web/: index.html
src/pathpal_api/: __init__.py  main.py  settings.py
src/pathpal_api/auth/: __init__.py  exceptions.py  handlers.py  schemas.py  security.py  services.py
src/pathpal_api/database/: __init__.py  connection.py  models.py
src/pathpal_api/features/: __init__.py
src/pathpal_api/features/alerts/: email_service.py  exceptions.py  handlers.py  models.py  openai_client.py  services.py
src/pathpal_api/features/alerts/templates/: emergency_alert.html
src/pathpal_api/features/trips/: __init__.py  exceptions.py  handlers.py  models.py  services.py
src/pathpal_api/features/trips/external_apis/: __init__.py  geocoding.py  mapbox_client.py
src/pathpal_api/features/websockets/: __init__.py  connection_manager.py  exceptions.py  handlers.py  models.py  services.py
tests/: __init__.py  conftest.py
tests/test_alerts/: __init__.py  test_handlers.py  test_openai_client.py
tests/test_auth/: test_handlers.py  test_models.py  test_security.py
tests/test_trips/: __init__.py  conftest.py  test_handlers.py  test_mapbox_client.py  test_services.py
tests/test_websockets/: __init__.py  test_connection_manager.py  test_handlers.py
(+1 files in other folders)
